fix: add letter-spacing to style

--- a/app/sections/technologies_page/HeroSection.module.scss
+++ b/app/sections/technologies_page/HeroSection.module.scss
@@ -18,12 +18,14 @@
     font-size: 25px;
     font-weight: 400;
     line-height: 130%;
-
+    letter-spacing: 1.5px;
     @include for-size(tablet) {
       font-size: 36px;
+      letter-spacing: 2.2px;
     }
     @include for-size(laptop) {
       font-size: 44px;
+      letter-spacing: 2.6px;
     }
   }
 
@@ -31,13 +33,16 @@
     font-size: 20px;
     font-size: 16px;
     line-height: 130%;
+    letter-spacing: 0.6px;
     @include for-size(tablet) {
       width: 555px;
       font-size: 17px;
+      letter-spacing: 0.7px;
     }
     @include for-size(laptop) {
       width: 678px;
       font-size: 20px;
+      letter-spacing: 0.8px;
     }
   }
 }
